--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+v1.0.4.2:
+* fixed bGetPlcTime bug from v1.0.4.0
+* standardized error reporting across all methods
+
 v1.0.4.1:
 * reorganized switch cases in main to prioritize events
 * updated bGenericDevice to reflect changes
